updated project dependencies
updated dependencies
fixed launcher script
deleted package-lock from repo
renamed 1 variable
fixed TypeScript Better-Sqlite type problem

--- a/localization/en.json
+++ b/localization/en.json
@@ -26,6 +26,6 @@
 
     "command_create_poll": "poll",
     "command_add_poll_choice": "addPollChoice",
-    "command_suppr_poll_choice": "delPollChoice"
+    "command_del_poll_choice": "delPollChoice"
 
 }
