made init methods recallable and adapted/fixed them
methods to set prefix, mod/admin rights or bot/debate default
channels, and configure process will be recallable after initial
setup.

this needed lots of changes and uncovered lots of bugs!

created Utils method to find channels and roles from messages.
(Discord replaces messages like "#channelName"
with "<#123456>" (the chan id)

added and modified strings for future use.
fixed inconsistent naming of variable (vocChan and vocChans)
causing confusion and bugs.

made server configure method recallable with an existing server.
You can now reconfigure it again from scratch.

fixed bug in SQLite updateDB that seems to never have been tested.
fixed conversion from bool to string not done and crashing SQLite.

updated unit test to changes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -10,15 +10,22 @@
     "invalid_chan" : "channel '${this.w}' doesn't exists and can't be created",
     "paramBoolSet": "this choice has been saved",
 
-    "langPrompt" : "please select the bot language between theses:\nen(glish), fr(ançais)",
-    "prefixPrompt" : "choose the prefix for calling the bot\nex: 'py'",
-    "adminRolePrompt": "type the roles that will have the rights to modify the bot settings\n separate them with ','. ex: 'adminInChief, moderatorSquad'\nplease don't put ',' characters in your roles names!",
-    "modRolePrompt": "type the roles that will be moderators in your voice channel\n separate them with ','. ex: 'adminInChief, moderatorSquad'\nplease don't put ',' characters in your roles names!",
-    "vocChanPrompt" : "type the name of the voice chan where you want the bot to be active\n ex: '#vocalDebate'",
-    "botChanPrompt": "type the name of the chan where the bot will send messages, like the waitlist\n the channel will be created if it doesn't exist yet\n ex: 'debate_bot'",
+    "error_no_args_command": "No args given as parameter. type '${this.w} help' to check this command usage",
+    "error_text_channel_not_found": "impossible to find the text channel dedicated to the bot\ntype 'py configure' to respecify it",
+    "error_vocal_channel_not_found": "impossible to find the vocal channel for the debate\ntype 'py configure' to respecify it",
+    "error_chan_general" : "channel '${this.w}' does not exists or the bot doesn't have the rights to connect to it",
+    "error_vocal_channel_rights": "the Pluriphony bot needs to join the vocal chan to measure the speaking time of participants",
+
+    "initWelcome": "welcome to the Pluriphony bot configuration.Please input the following informations:",
+    "langPrompt" : "set the bot language between theses:\nen(glish), fr(ançais)",
+    "prefixPrompt" : "set the prefix for calling the bot\nex: 'py'",
+    "adminRolePrompt": "set the roles that will have the rights to modify the bot settings\n separate them with ','. ex: 'adminInChief, moderatorSquad'\nplease don't put ',' characters in your roles names!",
+    "modRolePrompt": "set the roles that will be moderators in your voice channel\n separate them with ','. ex: 'adminInChief, moderatorSquad'\nplease don't put ',' characters in your roles names!",
+    "vocChanPrompt" : "set the name of the voice chan where you want the bot to be active\n ex: '#vocalDebate'",
+    "botChanPrompt": "set the name of the chan where the bot will send messages, like the waitlist\n the channel will be created if it doesn't exist yet\n ex: 'debate_bot'",
     "rateSpeakerPrompt": "do you want to allow the public to review a speaker after his speech? \ny(es) or n(o)",
     "topSpeakerPrompt": "do you want a command showing the list of the most active speakers of your server?\ny(es) or n(o)",
-    "endedInit": "the configuration is now finished, you can use the bot!",
+    "endedInit": "the configuration is now finished, you can use the bot!\ntype '${this.w} help' on the server to check its usage",
     "deletingTable": "Goodbye Dave...",
 
     "command_admin_reserved": "command '${this.w}' is reserved to bot admins",
