--- a/localization/fr.json
+++ b/localization/fr.json
@@ -10,15 +10,22 @@
     "invalid_chan" : "le channel '${this.w}' n'existe pas et ne peut être crée",
     "paramBoolSet": "ce choix a été sauvegardé",
 
-    "langPrompt" : "veuillez choisir la langue du bot  parmis celles çi:\nfr(ançais), en(glish)",
-    "prefixPrompt" : "choisissez le préfixe pour appeler le bot \nex: 'py'",
-    "adminRolePrompt": "tapez les rôles qui pourront modifier les paramètres du bot\n séparez les avec ',',. ex: 'adminAutogéré, modoDuSwag'\n ne mettez pas de virgules dans vos noms de rôles svp!",
-    "modRolePrompt": "tapez les rôles qui seront modérateurs dans vos channels vocaux\n séparez les avec ',',. ex: 'adminAutogéré, modoDuSwag'\n ne mettez pas de virgules dans vos noms de rôles svp!",
-    "vocChanPrompt" : "tapez le nom du channel vocal que le bot va surveiller \n ex: '#vocalDebat'",
-    "botChanPrompt": "tapez le nom du channel ou le bot enverra ces messages, comme la file d'attente\n Le channel va etre crée si il n'existe pas encore\n ex: 'bot_du_débat'",
+    "error_no_args_command": "Aucun argument donné en paramètre. tapez '${this.w} help' pour consulter l'aide de cette commande",
+    "error_text_channel_not_found": "impossible de retrouver le channel de message dédié au bot\ntapez '${this.w} chanBot (nom du channel)' pour le respécifier",
+    "error_vocal_channel_not_found": "impossible de retrouver le channel vocal pour la discussion\ntapez '${this.w} chanVocal (nom du channel)' pour le respécifier",
+    "error_chan_general" : "le channel '${this.w}' n'existe pas ou le bot n'a pas les droits pour s'y connecter",
+    "error_vocal_channel_rights": "le bot pluriphony doit se connecter au salon vocal pour mesurer le temps de parole des participants",
+
+    "initWelcome": "bienvenue dans la configuration du bot Pluriphony. Veuillez rentrer les informations suivantes:",
+    "langPrompt" : "définir la langue du bot  parmis celles çi:\nfr(ançais), en(glish)",
+    "prefixPrompt" : "définir le préfixe pour appeler le bot \nex: 'py'",
+    "adminRolePrompt": "définir les rôles qui pourront modifier les paramètres du bot\n séparez les avec ',',. ex: 'adminAutogéré, modoDuSwag'\n ne mettez pas de virgules dans vos noms de rôles svp!",
+    "modRolePrompt": "définir les rôles qui seront modérateurs dans vos channels vocaux\n séparez les avec ',',. ex: 'adminAutogéré, modoDuSwag'\n ne mettez pas de virgules dans vos noms de rôles svp!",
+    "vocChanPrompt" : "définir le nom du channel vocal que le bot va surveiller \n ex: '#vocalDebat'",
+    "botChanPrompt": "définir le nom du channel ou le bot enverra ces messages, comme la file d'attente\n Le channel va etre crée si il n'existe pas encore\n ex: 'bot_du_débat'",
     "rateSpeakerPrompt": "Voulez vous que le public puisse donner un avis sur un orateur après être passé à l'antenne? \no(ui) ou n(on)",
     "topSpeakerPrompt": "Voulez vous une commande pour lister les personnes les plus actives sur le channel vocal?\no(ui) ou n(on)",
-    "endedInit": "la configuration est maintenant finie, vous pouvez utiliser le bot!",
+    "endedInit": "la configuration est maintenant finie, vous pouvez utiliser le bot!\ntapez '${this.w} help' sur le serveur pour consulter son usage",
     "deletingTable": "Au revoir Dave...",
 
     "command_admin_reserved": "la commande '${this.w}' est réservée aux administrateurs du bot",
