made configure commands recallable, added help
modified commandList interfaces.

added help command to show all available commands with a string
describing how to use them.

added server settings commands to modif prefix, lang, roles and channels...

--- a/localization/en.json
+++ b/localization/en.json
@@ -27,6 +27,10 @@
     "topSpeakerPrompt": "do you want a command showing the list of the most active speakers of your server?\ny(es) or n(o)",
     "endedInit": "the configuration is now finished, you can use the bot!\ntype '${this.w} help' on the server to check its usage",
     "deletingTable": "Goodbye Dave...",
+    "helpPrompt": "displays this help",
+    "help_title": "Pluriphony is a discord bot to help manage vocal debates! \nsee http://example.com for a tour of its features!",
+    "help_admin_commands_title": "admin commands",
+    "configure_help": "restart the complete configuration setup\n(reset prefix, roles, channels...)",
 
     "command_admin_reserved": "command '${this.w}' is reserved to bot admins",
     "command_not_found": "command '${this.w}' doesn't exists",
@@ -34,6 +38,14 @@
     "command_create_poll": "poll",
     "command_add_poll_choice": "addPollChoice",
     "command_del_poll_choice": "delPollChoice",
+    "command_set_lang": "lang",
+    "command_set_prefix": "prefix",
+    "command_set_admin_roles": "admRoles",
+    "command_set_mod_roles": "modRoles",
+    "command_set_voc_chan": "vocalChan",
+    "command_set_bot_chan": "botChan",
+    "command_configure": "configure",
+    "command_help" : "help",
 
     "debate_title": "waitlist of channel **${this.w}**",
     "debate_subtitle_speaking_time": "\nspeaking time:**${this.w}**",
