--- a/localization/fr.json
+++ b/localization/fr.json
@@ -27,6 +27,10 @@
     "topSpeakerPrompt": "Voulez vous une commande pour lister les personnes les plus actives sur le channel vocal?\no(ui) ou n(on)",
     "endedInit": "la configuration est maintenant finie, vous pouvez utiliser le bot!\ntapez '${this.w} help' sur le serveur pour consulter son usage",
     "deletingTable": "Au revoir Dave...",
+    "helpPrompt": "affiche cette aide",
+    "help_title": "Pluriphony est un bot discord pour gérer les débats vocaux! \nVoyez http://example.com pour un tour de ses fonctionnalités!",
+    "help_admin_commands_title": "commandes administrateur",
+    "configure_help": "recommence la configuration des paramètres depuis le début\n(reconfigure le préfixe, les roles et channels...)",
 
     "command_admin_reserved": "la commande '${this.w}' est réservée aux administrateurs du bot",
     "command_not_found": "la commande '${this.w}' n'existe pas",
@@ -34,6 +38,14 @@
     "command_create_poll": "sond",
     "command_add_poll_choice": "ajChoixSond",
     "command_del_poll_choice": "supprChoixSond",
+    "command_set_lang": "langue",
+    "command_set_prefix": "prefixe",
+    "command_set_admin_roles": "admRoles",
+    "command_set_mod_roles": "modRoles",
+    "command_set_voc_chan": "chanVocal",
+    "command_set_bot_chan": "chanBot",
+    "command_configure": "configure",
+    "command_help" : "help",
 
     "debate_title": "file d'attente du channel **${this.w}**",
     "debate_subtitle_speaking_time": "\ntemps de parole: **${this.w}**",
